--- a/gradle.properties
+++ b/gradle.properties
@@ -3,4 +3,5 @@ krotoplusVersion=0.6.1
 protobufVersion=3.19.2
 grpcVersion=1.43.2
 logbackVersion=1.2.10
+ktorVersion=1.6.7
 kotlinxCoroutinesVersion=1.6.0
