--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -17,37 +17,34 @@ jobs:
   build:
     runs-on: ubuntu-latest
     name: Build Linux Docker Image
-    timeout-minutes: 30
+    timeout-minutes: 60
     steps:
-      -
-        name: Checkout
+      - name: Checkout
         uses: actions/checkout@master
 
-      -
-        name: Set Up QEMU
+      - name: submodules-init
+        uses: snickerbockers/submodules-init@v4
+
+      - name: Set Up QEMU
         uses: docker/setup-qemu-action@v1
 
-      -
-        name: Set Up Buildx
+      - name: Set Up Buildx
         uses: docker/setup-buildx-action@v1
 
-      -
-        name: Login DockerHub
+      - name: Login DockerHub
         uses: docker/login-action@v1
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_PASSWORD }}
 
-      -
-        name: Set Up Cache
+      - name: Set Up Cache
         uses: actions/cache@v2
         id: buildx-cache
         with:
           path: /tmp/.buildx-cache
           key: ${{ runner.os }}-buildx
 
-      -
-        name: Buildx
+      - name: Buildx
         uses: docker/build-push-action@v2
         with:
           context: .
