--- a/.github/workflows/build-x86.yml
+++ b/.github/workflows/build-x86.yml
@@ -50,4 +50,4 @@ jobs:
           file: Dockerfile
           platforms: linux/386
           push: true
-          tags: ${{ secrets.DOCKERHUB_USERNAME }}/${{ env.IMAGE_NAME }}:latest
+          tags: ${{ secrets.DOCKERHUB_USERNAME }}/${{ env.IMAGE_NAME }}:latest-x86
