--- a/.github/workflows/build-mips64le.yml
+++ b/.github/workflows/build-mips64le.yml
@@ -50,4 +50,5 @@ jobs:
           file: Dockerfile
           platforms: linux/mips64le
           push: true
-          tags: ${{ secrets.DOCKERHUB_USERNAME }}/${{ env.IMAGE_NAME }}:latest
+          tags: ${{ secrets.DOCKERHUB_USERNAME }}/${{ env.IMAGE_NAME }}:latest-mips64le
+
