--- a/.github/workflows/build-universal.yml
+++ b/.github/workflows/build-universal.yml
@@ -49,7 +49,7 @@ jobs:
       uses: actions/upload-artifact@v3.0.0
       with:
         # Artifact name
-        name: App
+        name: app.jar
         # A file, directory or wildcard pattern that describes what to upload
         path: build/output
         # The desired behavior if no files are found using the provided path.
