--- a/.github/workflows/build-x64.yml
+++ b/.github/workflows/build-x64.yml
@@ -50,4 +50,4 @@ jobs:
           file: Dockerfile
           platforms: linux/amd64,linux/arm64/v8,linux/arm/v7
           push: true
-          tags: ${{ secrets.DOCKERHUB_USERNAME }}/${{ env.IMAGE_NAME }}:latest
+          tags: ${{ secrets.DOCKERHUB_USERNAME }}/${{ env.IMAGE_NAME }}:latest-x64
