--- a/peers.yml
+++ b/peers.yml
@@ -1,3 +1,18 @@
+# 我的配置
+my:
+  # 我的 Peer id。留空则从环境变量读取（建议留空并通过环境变量配置）
+  id:
+  # 我的 Peer key。留空则从环境变量读取（建议留空并通过环境变量配置）
+  key:
+  # 不建议修改
+  nat:
+    # 自动检测配置（推荐）
+    auto: true
+    clientNatType: FULLCONE
+    isUpnpSupported: true
+    clientPublicIpAddress:
+    clientPublicIp6Address:
+# 对等端配置
 peers:
   # peer id (64位整数)
   200000:
