--- a/peers.yml
+++ b/peers.yml
@@ -23,6 +23,7 @@ peers:
     # 端口服务转发配置（可选）
     ports:
       # "https" 为服务名称（名称任取），具有相同服务名称的服务将被连接在一起
+      # 不要使用双下划线 __ 开头的服务名称，这些名称由系统保留使用。
       https:
         # 协议：TCP | UDP
         protocol: TCP
