--- a/src/main/resources/wireguard_server.conf
+++ b/src/main/resources/wireguard_server.conf
@@ -14,6 +14,7 @@ MTU = 1274
 # PostDown =
 
 [Peer]
+# AllowedIPs: redirect these IP CIDR to the client
 AllowedIPs = $(TargetPeerIp)/32
 PublicKey = $(TargetPeerPublicKey)
 PresharedKey = $(PeerPreSharedKey)
