--- a/.github/workflows/build-universal.yml
+++ b/.github/workflows/build-universal.yml
@@ -13,6 +13,9 @@ on:
     branches:
       - master
 
+env:
+  OUTPUT_NAME: natpoked.jar
+
 concurrency:
   group: universal-${{ github.ref }}
   cancel-in-progress: true
@@ -24,16 +27,17 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
+
+    - name: submodules-init
+      uses: snickerbockers/submodules-init@v4
+
     - name: Set up JDK 11
       uses: actions/setup-java@v2
       with:
         java-version: '11'
-        distribution: 'temurin'
-      
-    - name: submodules-init
-      uses: snickerbockers/submodules-init@v4
-      
-      # Runs a set of commands using the runners shell
+        distribution: 'zulu'
+
+    # Runs a set of commands using the runners shell
     - name: Run Prebuild shell
       run: |
         echo "Prebuild shell"
@@ -51,6 +55,6 @@ jobs:
         # Artifact name
         name: app.jar
         # A file, directory or wildcard pattern that describes what to upload
-        path: build/output
+        path: build/output/${{ env.OUTPUT_NAME }}
         # The desired behavior if no files are found using the provided path.
 
