--- a/.github/workflows/build-x64.yml
+++ b/.github/workflows/build-x64.yml
@@ -24,6 +24,18 @@ jobs:
       - name: submodules-init
         uses: snickerbockers/submodules-init@v4
 
+      - name: Download Universal JAR Artifact
+        uses: actions/download-artifact@v3
+        with:
+          name: app.jar
+          path: build/output
+
+      - name: Run Docker Prebuild shell
+        run: |
+          echo "Prebuild shell"
+          ls -al
+          mkdir -p ./build/output
+
       - name: Set Up QEMU
         uses: docker/setup-qemu-action@v1
 
@@ -47,7 +59,9 @@ jobs:
         uses: docker/build-push-action@v2
         with:
           context: .
-          file: Dockerfile
-          platforms: linux/amd64,linux/arm64/v8,linux/arm/v7
+          file: Dockerfile-RuntimeOnly
+          platforms: linux/amd64
           push: true
-          tags: ${{ secrets.DOCKERHUB_USERNAME }}/${{ env.IMAGE_NAME }}:latest-x64
+          tags: |
+            ${{ secrets.DOCKERHUB_USERNAME }}/${{ env.IMAGE_NAME }}:latest-x64
+            ${{ secrets.DOCKERHUB_USERNAME }}/${{ env.IMAGE_NAME }}:latest
