NATServer.kt: MQTT: Do not listen on Unix socket
Signed-off-by: Kenvix Zure <kenvixzure@live.com>

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,7 @@ services:
     container_name: natpoked
     restart: unless-stopped
     volumes:
-      - /home/config/natpoked:/data/config
+      - /home/config/natpoked:/data/Config
     environment:
       - DebugMode=true
       - DebugNetworkTraffic=true
