NATServer.kt: MQTT: Wait mqtt_passwd process
Signed-off-by: Kenvix Zure <kenvixzure@live.com>

--- a/Dockerfile-FullBuild
+++ b/Dockerfile-FullBuild
@@ -58,6 +58,7 @@ RUN echo "Begin docker image build ..." \
 
 WORKDIR /data
 ENV LANG en_US.UTF-8
-ENV IsRunningInDocker true
+ENV ExtraVMOptions ""
+ENV ExtraAppOptions ""
 
-CMD ["java", "@/data/cmdline-jvm-docker.txt", "-jar", "/data/app.jar"]
+CMD ["java", "@/data/cmdline-jvm-docker.txt", "$ExtraVMOptions", "-jar", "/data/app.jar", "$ExtraAppOptions"]
