NATServer: MQTT: Detect IP protocol version
Signed-off-by: Kenvix Zure <kenvixzure@live.com>

--- a/Dockerfile-RuntimeOnly
+++ b/Dockerfile-RuntimeOnly
@@ -16,6 +16,7 @@ RUN echo "Begin docker image build ..." \
     kcptun \
     iproute2 \
     net-tools \
+    ifupdown iptables iputils-ping net-tools \
     && echo "Cleaning build cache ..." \
     && (mkdir -p /data || true) \
     && (mkdir -p /data/Config || true) \
