NATClient.kt: Create peers.yml if not exists
Signed-off-by: Kenvix Zure <kenvixzure@live.com>

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,6 +4,7 @@ services:
     image: kenvix/natpoked
     container_name: natpoked
     restart: unless-stopped
+    tty: true
     volumes:
       - /home/config/natpoked:/data/Config
     environment:
