--- a/Config/peers.yml
+++ b/Config/peers.yml
@@ -1,10 +1,10 @@
 # 我的配置
 my:
-  # 我的 Peer id。留空则从环境变量读取（建议留空并通过环境变量配置）
+  # 已弃用。我的 Peer id。留空则从环境变量读取（建议留空并通过环境变量配置）
   id: ""
-  # 我的 Peer key。留空则从环境变量读取（建议留空并通过环境变量配置）
+  # 已弃用。我的 Peer key。留空则从环境变量读取（建议留空并通过环境变量配置）
   key: ""
-  # 不建议修改
+  # 手动NAT网络情况配置。不建议修改
   nat:
     # 自动检测配置（推荐）
     auto: true
