--- a/gradle.properties
+++ b/gradle.properties
@@ -3,5 +3,5 @@ krotoplusVersion=0.6.1
 protobufVersion=3.19.2
 grpcVersion=1.43.2
 logbackVersion=1.2.11
-ktorVersion=1.6.8
-kotlinxCoroutinesVersion=1.6.1
+ktorVersion=1.6.8-eap-339
+kotlinxCoroutinesVersion=1.7.3
